# pyserp-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/routers/: bing.py  google.py  health.py
app/core/: config.py  logging.py  version.py
app/schemas/: search.py
app/services/: bing.py  factory.py  google.py
tests/: conftest.py  test_health.py  test_lifespan.py  test_search_endpoints.py
